starting work on unit tests